--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,59 @@ ul{
     border: none;
     color: rgba(255, 255, 255, 1);;
 }
+#EA-btn{
+    background-color: rgba(255, 255, 255, 1);
+    color: #30B868;
+    padding: 10px 20px;
+    border-radius: 50px;
+    border: none;
+    margin-top: 30px;
+}
+.fawesome{
+    margin-right: 10px;
+}
+.hero-title{
+    margin-top: 15PX;
+    font-size: 72px;
+    color: #d6c9c9;
+}
+#hero-title2{
+    font-size: 72px;
+    color: #30B868; 
+    margin-bottom: 15px;
+}
+#hero-desciption{
+    color: #d6cccc;
+    margin: 20px;
+    font-size: 20px;
+
+}
+#sbyv-btn{
+    background-color: #30b868;
+    color: rgba(255, 255, 255, 1);
+    padding: 15px 20px;
+    border-radius: 5px;
+    border: none;
+    margin: 10px;
+}
+#shiw-btn{
+    background-color: transparent;
+    color: #ffffff;
+    padding: 15px 20px;
+    border-radius: 5px;
+    border: 1px solid whitesmoke;
+    margin: 10px;
+}
+button :hover{
+    color: rgb(90, 36, 192);
+    border-bottom: 2px solid rgb(0, 0, 0);
+}
+.hero-bg{
+    background-image: url(../assets/hero-bg.png);
+    max-width: 100%;
+    height: 519px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
