--- a/styles/style.css
+++ b/styles/style.css
@@ -81,3 +81,42 @@ button :hover{
     align-items: center;
     text-align: center;
 }
+.note-container{
+    text-align: center;
+    margin-top: 30px;
+    padding: 0px 15px;
+    font-size: 48px;
+}
+.note-description{
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.card {
+    height: 180px;
+    width: 250px;
+    text-align: center;
+    padding: 30px;
+    margin: 10px;
+    box-shadow: 1px 1px 1px rgb(141, 145, 143);
+}
+.card-img{
+    padding: 15px;
+    width: 25px;
+    height: 25px;
+    border-radius: 60%;
+    background-color: rgba(249, 85, 85, 1);
+   
+}
+.card-heading{
+    margin: 15px;
+}
+.card-description{
+    color: #050303;
+}
